monitoring/prometheus-stack/qbittorrent-exporter-deployment.yaml
# qBittorrent Exporter Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
    name: qbittorrent-exporter
    namespace: prometheus-stack
    labels:
        app: qbittorrent-exporter
        app.kubernetes.io/name: qbittorrent-exporter
spec:
    replicas: 1
    selector:
        matchLabels:
            app: qbittorrent-exporter
            app.kubernetes.io/name: qbittorrent-exporter
    template:
        metadata:
            labels:
                app: qbittorrent-exporter
                app.kubernetes.io/name: qbittorrent-exporter
        spec:
            dnsPolicy: Default
            containers:
                - name: qbittorrent-exporter
                  image: ghcr.io/esanchezm/prometheus-qbittorrent-exporter:v1.5.1
                  ports:
                    - containerPort: 8000
                      name: metrics
                  resources:
                    requests:
                        cpu: 25m
                        memory: 64Mi
                    limits:
                        cpu: 100m
                        memory: 128Mi
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age132v2x3u5expx92pllzw2wy5es9c4emc4qs8cx4huh7eddd7ac4dqkscjph
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5bDZ3Q1dYQXhucDRlekE3
[...]
            bqWi6KY17T4yHsx9gbXuYuXW2/BojB3jXas7gqIZ1br7B2uQo4laAA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-02-08T22:56:50Z"
    mac: ENC[AES256_GCM,data:TNwl7fjc3sR3akVXhc092UTHplhY4Gx4uNfo0wztfb8iC0Ys1nW8JYvDntlteJPafLmwMvJGeBNBmsfyPtNDfsAfN3WDI+a0eOufEJfFoERdkSuC33lLrwNMmg0sMg7523PS8i+I+UKFyDmW7JkyF9Uvqy0sI0oZokXa2slRYzY=,iv:pvlf71RHdZyyQEqADLs1hGy72Ts+7BvUsspr9O0mpmY=,tag:Ch/x0i4hRu8e9kNGglFBIw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData)$
    version: 3.7.3
---
# Service for qBittorrent Exporter
apiVersion: v1
kind: Service
metadata:
    name: qbittorrent-exporter
    namespace: prometheus-stack
    labels:
        app: qbittorrent-exporter
        app.kubernetes.io/name: qbittorrent-exporter
spec:
    selector:
        app: qbittorrent-exporter
        app.kubernetes.io/name: qbittorrent-exporter
    ports:
        - name: metrics
          port: 8000
          targetPort: metrics
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age132v2x3u5expx92pllzw2wy5es9c4emc4qs8cx4huh7eddd7ac4dqkscjph
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5bDZ3Q1dYQXhucDRlekE3
[...]
            bqWi6KY17T4yHsx9gbXuYuXW2/BojB3jXas7gqIZ1br7B2uQo4laAA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-02-08T22:56:50Z"
    mac: ENC[AES256_GCM,data:TNwl7fjc3sR3akVXhc092UTHplhY4Gx4uNfo0wztfb8iC0Ys1nW8JYvDntlteJPafLmwMvJGeBNBmsfyPtNDfsAfN3WDI+a0eOufEJfFoERdkSuC33lLrwNMmg0sMg7523PS8i+I+UKFyDmW7JkyF9Uvqy0sI0oZokXa2slRYzY=,iv:pvlf71RHdZyyQEqADLs1hGy72Ts+7BvUsspr9O0mpmY=,tag:Ch/x0i4hRu8e9kNGglFBIw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData)$
    version: 3.7.3
