monitoring/prometheus-stack/alertmanager-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: prometheus-stack
spec:
  hostnames:
  - alertmanager.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kube-prometheus-stack-alertmanager
      port: 9093
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
