monitoring/prometheus-stack/loki-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: prometheus-stack
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Loki"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "mdi-math-log"
    gethomepage.dev/href: "https://loki.serverops.live"
spec:
  hostnames:
  - loki.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: loki-gateway
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
